--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>test</title>
     </head>
     <body>
-        <form action="http://localhost:3000/" method="POST">
+        <form action="/" method="POST">
         <textarea name="chart" cols="50" rows="10"></textarea><br>
         <button>送信</button>
         </form>
