--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>test</title>
+        <title>PjsekaiSUS2img</title>
     </head>
     <body>
+        <h1>Pjsekai SUS to Image Converter</h1>
         <form action="#" method="POST">
-        <textarea name="chart" cols="50" rows="10"></textarea><br>
-        <button>送信</button>
+        <textarea name="chart" cols="50" rows="10" placeholder="Please paste sus here"></textarea><br>
+        <button>Convert</button>
         </form>
     </body>
+    <footer>
+        <p><b>Chart Image Converter is modified from Erik's (pjsek.ai) version:</b> <a href="https://github.com/pjsek-ai/pjsekai-web" target="_blank" rel="noopener">https://github.com/pjsek-ai/pjsekai-web</a></p>
+        <p><b>Modified by</b> <a href="https://twitter.com/PurplePaletteCH" target="_blank" rel="noopener">紫式部(@PurplePaletteCH)</a></p>
+    </footer>
 </html>
