横長の画像の生成

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Pjsekai SUS to Image Converter</h1>
-        <form action="#" method="POST">
+        <form action="/landscape" method="POST">
         <textarea name="chart" cols="50" rows="10" placeholder="Please paste sus here"></textarea><br>
         <button>Convert</button>
         </form>
